mojo: Support sync calls through ThreadSafeInterfacePtr

Previously ThreadSafeInterfacePtr only supported async calls. Now it
also supports sync calls.

The one caveat to be aware of is that sync calls will block both the
calling thread and the thread that the underlying InterfacePtr is bound
to. That means, e.g., that the InterfacePtr can't be bound to the IO
thread. Letting the call be async on the InterfacePtr thread is left as
a TODO.

BUG=668565

Review-Url: https://codereview.chromium.org/2770153003
Cr-Commit-Position: refs/heads/master@{#461016}

Former-commit-id: 0c3ac0678cbc511f793dfd7386729b1b2ae2e7e1